Agentforce/force-app/main/default/objects/Good_News_Story__c/Good_News_Story__c.object-meta.xml
<CustomObject>
    <description>AD-190 - custom object to capture good news stories</description>
    <label>Good News Story</label>
    <nameField>
        <displayFormat>G-{0000000}</displayFormat>
        <label>Good News Story Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Good News Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>