Agentforce/force-app/main/default/objects/Good_News_Story__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>AD-162 Display Good News Stories linked to the Account with most recent first</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Good News Stories</relationshipLabel>
    <relationshipName>Good_News_Stories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>