Agentforce/force-app/main/default/objects/Good_News_Story__c/fields/Account_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Account_Business_Unit__c</fullName>
    <formula>Account__r.Owner_Business_Unit__c</formula>
    <label>Account Business Unit</label>
    <type>Text</type>
</CustomField>