Agentforce/force-app/main/default/objects/Good_News_Story__c/fields/Account_Corporate_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Corporate_Type__c</fullName>
    <formula>TEXT(Account__r.Corporate_Type__c)</formula>
    <label>Account Corporate Type</label>
    <type>Text</type>
</CustomField>