Agentforce/force-app/main/default/objects/Good_News_Story__c/fields/Account_Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Team__c</fullName>
    <formula>TEXT(Account__r.Owner.Team__c)</formula>
    <label>Account Owner Team</label>
    <type>Text</type>
</CustomField>