Agentforce/force-app/main/default/objects/Good_News_Story__c/fields/Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Region__c</fullName>
    <formula>TEXT(Account__r.Owner_Region__c)</formula>
    <label>Account Region</label>
    <type>Text</type>
</CustomField>