Agentforce/force-app/main/default/objects/Good_News_Story__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account does not match</errorMessage>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contract__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Good News Stories</relationshipLabel>
    <relationshipName>Good_News_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>