Agentforce/force-app/main/default/objects/Good_News_Story__c/fields/Created_By_Country__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Country__c</fullName>
    <formula>CreatedBy.Country</formula>
    <label>Created By Country</label>
    <type>Text</type>
</CustomField>