Agentforce/force-app/main/default/objects/Good_News_Story__c/fields/Creator_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Creator_Business_Unit__c</fullName>
    <formula>TEXT(CreatedBy.Business_Unit__c)</formula>
    <label>Creator Business Unit</label>
    <type>Text</type>
</CustomField>