Agentforce/force-app/main/default/objects/Good_News_Story__c/fields/Creator_Corporate_Type__c.field-meta.xml
<CustomField>
    <fullName>Creator_Corporate_Type__c</fullName>
    <formula>TEXT(CreatedBy.Corporate_Type__c)</formula>
    <label>Creator Corporate Type</label>
    <type>Text</type>
</CustomField>