Agentforce/force-app/main/default/objects/Good_News_Story__c/fields/Creator_Region__c.field-meta.xml
<CustomField>
    <fullName>Creator_Region__c</fullName>
    <formula>TEXT(CreatedBy.Region__c)</formula>
    <label>Creator Region</label>
    <type>Text</type>
</CustomField>