Agentforce/force-app/main/default/objects/Good_News_Story__c/fields/Creator_Team__c.field-meta.xml
<CustomField>
    <fullName>Creator_Team__c</fullName>
    <formula>TEXT(CreatedBy.Team__c)</formula>
    <label>Creator Team</label>
    <type>Text</type>
</CustomField>