Agentforce/force-app/main/default/objects/Good_News_Story__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>AD-33 to capture reward and recognition activity on an account</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>