Agentforce/force-app/main/default/objects/Good_News_Story__c/fields/Good_News__c.field-meta.xml
<CustomField>
    <fullName>Good_News__c</fullName>
    <label>Good News</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>