Agentforce/force-app/main/default/objects/Good_News_Story__c/fields/GoodNewsCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>GoodNewsCaseSafeID__c</fullName>
    <description>Good News CaseSafeID</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GoodNewsCaseSafeID</label>
    <type>Text</type>
</CustomField>