Agentforce/force-app/main/default/objects/Good_News_Story__c/fields/Legacy_OCS_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_OCS_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Legacy OCS ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>