Agentforce/force-app/main/default/objects/Good_News_Story__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-33 to capture reward and recognition activity on an account</description>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Good News Stories</relationshipLabel>
    <relationshipName>Good_News_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>