Agentforce/force-app/main/default/objects/Good_News_Story__c/fields/Sub_Topic__c.field-meta.xml
<CustomField>
    <fullName>Sub_Topic__c</fullName>
    <label>Sub Topic</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Topic__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apprenticeship</fullName>
            </value>
            <value>
                <fullName>Veteran Success</fullName>
            </value>
            <value>
                <fullName>Outstanding Achievement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>