Agentforce/force-app/main/default/objects/Good_News_Story__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract Addition/Extension</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>ESG</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>People</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Recognition</fullName>
            </value>
            <value>
                <fullName>Reward</fullName>
            </value>
            <value>
                <fullName>Star Award</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>