Agentforce/force-app/main/default/objects/Good_News_Story__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contract__c</columns>
    <columns>Good_News__c</columns>
    <columns>Topic__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>