Agentforce/force-app/main/default/objects/Good_News_Story__c/listViews/My_Good_News.listView-meta.xml
<ListView>
    <fullName>My_Good_News</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Date__c</columns>
    <columns>Topic__c</columns>
    <columns>Reference__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Good News</label>
</ListView>